feat: change model
